--- a/templates/home1.html
+++ b/templates/home1.html
@@ -29,10 +29,49 @@
 </head>
 <body class="bg-light">
     <!-- Topbar Start -->
-    {%  include 'topbar.html' %}
+    <div class="container-fluid bg-light pt-3 d-none d-lg-block">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
+                    <div class="d-inline-flex align-items-center">
+                        <p><i class="fa fa-envelope mr-2"></i>ergo-rice@hotmail.com</p>
+                        <p class="text-body px-3">|</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+593 0982028735</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 text-center text-lg-right">
+                    <div class="d-inline-flex align-items-center">                        
+                        <a id= "salir" class="text-primary pl-3" href="cerrar_sesion">Cerrar Sesión
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Topbar End -->    
     <!-- Navbar Start -->
-    {%  include 'navbar.html' %}
+    <div class="container-fluid position-relative nav-bar p-0">
+        <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
+            <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
+                <img src="{{ url_for('static', filename='imagenes/logo.png') }}" width="90" height="90">
+                <a href="" class="navbar-brand">
+                    <h1 class="m-0 text-primary"><span class="text-dark">ERGO</span>RICE</h1>
+                </a>                
+                <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
+                    <a href="" class="navbar-brand ml-auto py-0">
+                        {% if metodo_evaluacion == 'RULA' %}
+                            <h1 class="m-0 text-primary"><span class="text-dark">EVALUACIÓN</span>RULA</h1>                    
+                        {% else %}
+                            {% if metodo_evaluacion == 'REBA' %}
+                                <h1 class="m-0 text-primary"><span class="text-dark">EVALUACIÓN</span>REBA</h1>                                                    
+                            {% endif %}
+                        {% endif %}                        
+                    </a>
+                </div>                
+            </nav>
+        </div>
+    </div>
     <!-- Navbar End -->
     <!-- Packages Start -->
     <div class="container-fluid py-5">
@@ -226,7 +265,40 @@
     </div>
     <!-- About End -->
     <!-- Footer Start -->
-    {%  include 'footer.html' %}
+    <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
+        <div class="row pt-5">
+            <div class="col-lg-4 col-md-6 mb-5">
+                <a href="" class="navbar-brand">
+                    <h1 class="text-primary"><span class="text-white">ERGO</span>RICE</h1>
+                </a>
+                <p>Realiza evaluaciones de posturas ergonómicas de forma rápida y sencilla.</p>                
+            </div>            
+            <div class="col-lg-4 col-md-6 mb-5">
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Enlaces rápidos</h5>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-white-50 mb-2" href="/registro"><i class="fa fa-angle-right mr-2"></i>Registrarse</a>
+                    <a class="text-white-50 mb-2" href="/login"><i class="fa fa-angle-right mr-2"></i>Iniciar sesión</a>
+                    <a class="text-white-50 mb-2" href="/manual"><i class="fa fa-angle-right mr-2"></i>Manual</a>
+                    <a class="text-white-50 mb-2" href="/ejemplos"><i class="fa fa-angle-right mr-2"></i>Ejemplos</a>
+                    <a class="text-white-50 mb-2" href="/info_reba"><i class="fa fa-angle-right mr-2"></i>Reba</a>
+                    <a class="text-white-50 mb-2" href="/info_rula"><i class="fa fa-angle-right mr-2"></i>Rula</a>                    
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-5">
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contáctanos</h5>                
+                <p><i class="fa fa-phone-alt mr-2"></i>+593 0982028735</p>
+                <p><i class="fa fa-envelope mr-2"></i>ergo-rice@hotmail.com</p>                                
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
+        <div class="row">
+            <div class="col-lg-12 text-center text-md-left mb-3 mb-md-0">
+                <p class="m-0 text-white-50">Copyright &copy; <a href="#">ergorice</a>. All Rights Reserved.</a>
+                </p>
+            </div>            
+        </div>
+    </div>
     <!-- Footer End -->
 
 
